--- a/apps/unfuddle/assets/views/button/overlay.hbs
+++ b/apps/unfuddle/assets/views/button/overlay.hbs
@@ -8,7 +8,7 @@
       </li>
       <li>
         <label for="description">Message Body</label>
-        <textarea name="description">
+        <textarea name="body">
           {{content.text}} \n
           https://{{../../company.subdomain}}.supportbee.com/tickets/{{id}}
         </textarea>
